fix:overflow padding

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 
 .notOverflow {
   overflow: hidden;
-  width: 100%;
+  padding-right: 17px;
 }
 
 button, input, textarea {
