--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -14,7 +14,7 @@ body
         max-width: 100%
 .notOverflow 
     overflow: hidden
-    width: 100%
+    padding-right: 17px
 button, input, textarea
     outline: none
 button
